--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             "Tujuan negara Indonesia salah satunya adalah ikut melaksanakan ketertiban __________.";
         } else if (index === 6) {
           document.getElementById("question").textContent =
-            "Tiap warga negara memiliki hak dan kewajiban dalam usaha __________ negara.";
+            "Tiap warga negara memiliki hak dan __________ dalam usaha pertahanan dan keamanan negara.";
         } else if (index === 7) {
           document.getElementById("question").innerHTML =
             "Pembangunan desa yang demokratis juga dikenal sebagai <i>democratic __________ development</i>.";
